Refactor: move to bot folder; golangci-lint v1.55.1

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -33,6 +33,15 @@ linters:
   disable:
     - goerr113
     - maligned
+    - varnamelen
+    - tagliatelle
+    - nonamedreturns
+    - nilnil
+    - exhaustruct
+    - contextcheck
+    - gci
+    - gofumpt
+    - exhaustivestruct
 
 issues:
   exclude-rules:
